Refactor deprecated API calls (eg.: new Double())